Update: Enhanced UI/UX, improved changelog, updated navbar and homepage background

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "apexify.js-website",
+  "name": "apexify.js-documentation",
   "version": "1.0.0",
   "private": true,
   "author": "zenith-79",
