--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@next/mdx": "^16.1.0",
     "@types/prismjs": "^1.26.5",
     "@types/react-syntax-highlighter": "^15.5.13",
+    "apexify.js": "^5.2.2",
     "next": "^14.2.0",
     "next-mdx-remote": "^5.0.0",
     "prismjs": "^1.30.0",
